# Computer-Vision

./: .gitignore  CMakeLists.txt  blob_tester.py  cvClient.py  cv_arena.py  cv_locater.py  tests.py  vision_prototype.py  xmake.lua
config/: default.yaml
include/: CalibratorFactory.h  CameraFactory.h  Config.h  ICalibrator.h  IPipeline.h  IProcess.h  IterativeSearch.h  PipelineFactory.h  ProcessFactory.h
include/calibrator/: BlobCalibrator.h
include/calibtrator/: BlobCalibrator.h
include/pipeline/: IterativeSearch.h
include/process/: ServerProcess.h  UserProcess.h
src/: CalibratorFactory.cpp  CameraFactory.cpp  Config.cpp  IterativeSearch.cpp  PipelineFactory.cpp  ProcessFactory.cpp  main.cpp
src/calibrator/: BlobCalibrator.cpp
src/pipeline/: IterativeSearch.cpp
src/process/: ServerProcess.cpp  UserProcess.cpp
